Update index page fixed broken image
replaced file path for image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <br />
   <table>
     <tr>
-      <td> <img src="C:\Users\phili\OneDrive\Desktop\web development\HTML _Personal Site\images\CBL_GMB_Cover-Photo-480x270.jpg" alt="Phils profile picture">
+      <td> <img src="CBL_GMB_Cover-Photo-480x270.jpg" alt="Phils profile picture">
       </td>
       <td>
         <h1>Phil Langin</h1>
